--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "stripe": "^12.1.1"
   }
 }
